--- a/Frontend/src/styles/dialogs.scss
+++ b/Frontend/src/styles/dialogs.scss
@@ -1,6 +1,6 @@
 @import "./variables";
 
-
+$cardActionHeight:77px;
 
 .dialog{
   width:100%;
@@ -30,12 +30,13 @@
 }
 
 .card-content{
-  height: calc(100% - 50px);
+  height: calc(100% - #{$cardActionHeight});
 }
 .card .card-action {
   display: flex;
   align-items: end;
   justify-items: right;
+  min-height: $cardActionHeight;
   /* justify-content: space-between; */
   flex-direction: row-reverse;
   a {
@@ -94,9 +95,6 @@ input[type=search]{
   background: #fff;
   border:1px solid $searchInputBorderColor;
   padding:0 10px;
-}
-.card-high .card-content{
-  height:calc(100% - 55px);
 }
 .card-high{
   top:10%;
@@ -190,7 +188,6 @@ input[type=search]{
 @mixin fullsizeCard(){
   position:fixed;
   width:100%;
-  padding-bottom: 25px;
   left:0%;
   margin-left:0!important;
 }
